# cmake_basics

./: CMakeLists.txt  console.c  console.h  main.c
console/: CMakeLists.txt  console.h
console/include/: city.h  name.h
console/src/: city.c  name.c
